--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Health Care</string>
+    <string name="login_username">User Name</string>
+    <string name="login_password">Password</string>
 </resources>
