--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Health Care</string>
     <string name="login_username">User Name</string>
     <string name="login_password">Password</string>
+    <string name="login_text">LOGIN</string>
 </resources>
