--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login_username">User Name</string>
     <string name="login_password">Password</string>
     <string name="login_text">LOGIN</string>
+    <string name="sign_up_btn_text">CREATE NEW ACCOUNT</string>
 </resources>
