--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login_password">Password</string>
     <string name="login_text">LOGIN</string>
     <string name="sign_up_btn_text">CREATE NEW ACCOUNT</string>
+    <string name="login_btn_load_color">white</string>
 </resources>
