--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,10 @@
     <string name="address">Address</string>
     <string name="specilization">Specilization</string>
     <string name="hospital">Hospital</string>
-    <string name="available_time" >Available Time</string>
+    <string name="available_time">Available Time</string>
     <string name="time_from">Time From</string>
     <string name="time_to">Time To</string>
     <string name="location">Location</string>
     <string name="add_time">Add Time</string>
+    <string name="available_times">Available Times</string>
 </resources>
