--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,12 +43,12 @@
     <string name="avail_phar_title">Available pharmacies</string>
 
 
-
-
     <string name="sign_up_confirm_pass">confirm password</string>
     <string name="sign_up_btn">signup</string>
     <string name="phar_search">Search Pharmacy</string>
     <string name="sign_up">Sign Up</string>
+    <string name="Redirect_pharmacyList">Pharmacies</string>
+    <string name="redirect_addprescription">My prescriptions</string>
 
 
 </resources>
