getstarted page created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="quick_service">Quick Service</string>
     <string name="call_1990">Call 1990</string>
     <string name="ambulence_service_1990">Ambulence Service 1990</string>
+    <string name="next">Next</string>
 </resources>
