--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="dob">Date Of Birth</string>
     <string name="age">Age</string>
     <string name="edit_doctor">Edit Details</string>
+    <string name="confirm_text">Do you want to update?</string>
+    <string name="no_text">No</string>
+    <string name="yes_text">Yes</string>
 </resources>
