--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="call_1990">Call 1990</string>
     <string name="ambulence_service_1990">Ambulence Service 1990</string>
     <string name="next">Next</string>
+    <string name="dt">dt</string>
+    <string name="todo">TODO</string>
 </resources>
