--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="next">Next</string>
     <string name="dt">dt</string>
     <string name="todo">TODO</string>
+    <string name="select_a_doctor">Select a Doctor</string>
 </resources>
